# python-idealista

./: .gitignore  .readthedocs.yaml  README.md  mypy.ini  pyproject.toml  tox.ini
docs/source/: conf.py  index.md
src/idealista/: __init__.py  api.py  enums.py
tests/: test_auth.py
