[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "python-idealista"
authors = [
  {name = "Juan Luis Cano Rodríguez", email = "hello@juanlu.space"},
]
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)"
]
requires-python=">=3.9"
dependencies = [
    "attrs",
    "requests",
    "requests_oauthlib",
]
dynamic = ["version", "description"]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "mypy",
    "pytest",
    "pytest-cov",
]
doc = [
    "furo",
    "myst-parser",
]

[project.urls]
Source = "https://github.com/astrojuanlu/python-idealista"

[tool.flit.module]
name = "idealista"
